# chatty

./: .gitignore  Dockerfile  README.md  app.py  app_run.sh  app_setup.sh  chatty.py  docker-compose.yml  pyproject.toml  requirements.txt
Notebooks/: LangChain_example.ipynb  Notebook1.ipynb
ollama/: README.md
ollama_mistral/: Dockerfile  README.md
