[tool.poetry]
name = "chatty"
version = "0.1.0"
description = ""
authors = ["chernegi <chernega.ivan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0.1"
pinecone-client = "^2.2.4"
langchain = "^0.0.345"
openai = "^1.3.7"
wikipedia = "^1.4.0"
google-api-python-client = "^2.109.0"
unstructured = "^0.11.2"
tabulate = "^0.9.0"
pdf2image = "^1.16.3"
ipykernel = "^6.25.2"
huggingface-hub = "^0.19.4"
numexpr = "^2.8.7"
sentence-transformers = "^2.2.2"
faiss-cpu = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
