[tool.poetry]
name = "chatty"
version = "0.1.0"
description = ""
authors = ["chernegi <chernega.ivan@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.12"
langchain = "^0.0.343"
streamlit-chat = "^0.1.1"
openai = "^1.3.6"
langchainhub = "^0.1.14"
streamlit = "^1.29.0"
watchdog = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
